- Add Chip or Circle for data: Confirmed, Deaths, and Recovered - Get World's total data: Confirmed, Deaths, and Recovered - Check Styles and Responsibility with mobile

--- a/src/App.css
+++ b/src/App.css
@@ -37,6 +37,12 @@
   }
 }
 
+.DayPickerInput > input {
+  text-align: center;
+  margin-bottom: 20px;
+  font-size: x-large;
+  font-weight: bold;
+}
 
 td.tableCustomBody__tableCell {
   font-size: large;
